...
                                              child: PurchaseForm(
                                                cartItems: items,
                                              ),
                                            ),
                                          );
                                        },
                                  child: const Text('Złóż zamówienie'),
                                ),
                              ),
                            ),
                          ],
                        ),
                      ),
...
                        ? ListView(
                            physics: const AlwaysScrollableScrollPhysics(),
                            children: const [
                              SizedBox(height: 120),
                              Center(
                                child: Text(
                                  'Koszyk jest pusty',
                                  style: TextStyle(
                                    fontSize: 24,
                                    color: Colors.white54,
                                  ),
                                ),
                              ),
...
