...
              fontWeight: FontWeight.w600,
              letterSpacing: 0.8,
            ),
          ),
        ),
        TextFormField(
          key: const Key('profileNameField'),
          controller: nameController,
          decoration: const InputDecoration(
            labelText: 'Imię',
            prefixIcon: Icon(Icons.person_outline, color: Colors.white38),
          ),
          autovalidateMode: AutovalidateMode.onUserInteraction,
...
          },
          style: const TextStyle(color: Colors.white),
          textInputAction: TextInputAction.next,
        ),
        const SizedBox(height: 12),
        TextFormField(
          key: const Key('profileSurnameField'),
          controller: surnameController,
          decoration: const InputDecoration(
            labelText: 'Nazwisko',
            prefixIcon: Icon(Icons.person_outline, color: Colors.white38),
          ),
          autovalidateMode: AutovalidateMode.onUserInteraction,
...
